<resources>
    <string name="app_name">Zardchoobeh</string>
    <string name="author">Author</string>
    <string name="ingredients">Ingredients</string>
    <string name="Recipe">Recipe</string>
    <string name="as_you_needed">as you needed</string>
    <string name="Search">Search</string>
    <string name="whatToCook">What to cook</string>
    <string name="profile">Profile</string>
    <string name="typeSomethingForSearch">Type something to search</string>
    <string name="noResultForSearch">No result for your search</string>
    <string name="changeLanguageTo">Change language to Farsi</string>
    <string name="changeTextSize">Change text size</string>
    <string name="nightMode">Night mode</string>
    <string name="clearCatch">Clear cache</string>
    <string name="login">login</string>
    <string name="cacheRemovedSuccessfully">Cache removed successfully!</string>
    <string name="failedToClearCache">Failed to clear cache :(</string>
    <string name="changeThisToChangeTextSize">جهت تغییر اندازه متن نشانگر زیر را جابجا کنید.</string>
    <string name="confirm">تأیید</string>
</resources>