<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <import type="com.aaj.balonetchallengeapplication.util.AppTextSizes" />

        <variable
            name="view"
            type="com.aaj.balonetchallengeapplication.view.fragment.SearchFragment" />

        <variable
            name="viewModel"
            type="com.aaj.balonetchallengeapplication.viewmodel.SearchFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.SearchFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/search_input_bg"
                android:hint="@string/Search"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="48dp"
                android:paddingBottom="8dp"
                android:text="@={viewModel.searchText}"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_24"
            android:text="@string/typeSomethingForSearch"
            android:theme="@style/TintTextSecondary"
            android:visibility="@{viewModel.searchText.length()>0?View.GONE:View.VISIBLE}"
            app:customTextSize="@{AppTextSizes.NORMAL}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_24"
            android:text="@string/noResultForSearch"
            android:theme="@style/TintTextSecondary"
            android:visibility="@{(viewModel.searchText.length()>0 &amp;&amp; viewModel.recipes.size()&lt;1)?View.VISIBLE:View.GONE}"
            app:customTextSize="@{AppTextSizes.NORMAL}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBox" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="8dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBox"
            app:spanCount="2"
            tools:listitem="@layout/recipe_item" />

        <ProgressBar
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:visibility="@{viewModel.isLoading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>